somewhat of a fix for overflowing regex table

--- a/ui/pages/setupData/data.css
+++ b/ui/pages/setupData/data.css
@@ -42,6 +42,7 @@
     overflow: auto;
     display: flex;
     flex-direction: column;
+    max-height: 600px;
 }
 #setupDataSortBar {
     height: 60px;
